# Airline_Flight_Management_System

./: CMakeLists.txt  README.md  main.cpp  manifest.txt
core/: Flight.cpp  Flight.h  WaitingList.h
docs/: index.html
entities/: BusinessTicket.cpp  BusinessTicket.h  EconomyTicket.cpp  EconomyTicket.h  Passenger.cpp  Passenger.h  Ticket.cpp  Ticket.h
services/: SecurityCheck.cpp  SecurityCheck.h
